--- a/contact-form.html
+++ b/contact-form.html
@@ -293,7 +293,7 @@ input[type="date"] {
 </div>
       <div id="contact-results" class="scrollable-results">
         <!-- Filtered contact cards appear here -->
-		<div class="contact-card">
+		<div class="contact-card"data-id="${contact.id}">
   <div class="contact-initials"></div>
   <div class="contact-info">
     <div class="contact-name"></div>
@@ -518,6 +518,13 @@ function showContactDetails(contact) {
 
   const colors = categories.map(cat => categoryColorMap[cat.trim?.()] || "").filter(Boolean);
   const background = getPieGradient(colors);
+const deleteBtn = document.querySelector(".contact-card-actions .fa-trash");
+if (deleteBtn) {
+  deleteBtn.onclick = () => {
+    window.currentContactId = contact.id;
+    document.getElementById("confirm-delete-popup").classList.remove("hidden");
+  };
+}
 
   // Create address without duplicate
 // Explicitly fix address duplication issue
@@ -863,6 +870,68 @@ window.updateCategoryFields = function () {
   }
 
   window.addEventListener("load", initAutocomplete);
+</script>
+
+<!-- Delete Confirmation Popup -->
+<div id="confirm-delete-popup" class="popup hidden">
+  <div class="popup-content">
+    <p>Are you sure you want to delete this contact?<br>This action cannot be undone.</p>
+    <div class="popup-buttons">
+      <button id="confirm-delete-btn">Delete</button>
+      <button id="cancel-delete-btn">Cancel</button>
+    </div>
+  </div>
+</div>
+
+
+<script>
+let currentContactIdToDelete = null;
+
+// Attach delete icon click after contacts are rendered
+document.addEventListener("click", function (e) {
+  if (e.target.classList.contains("fa-trash")) {
+    const card = e.target.closest(".contact-card");
+    currentContactIdToDelete = card?.getAttribute("data-id");
+    if (currentContactIdToDelete) {
+      document.getElementById("confirm-delete-popup").classList.remove("hidden");
+    }
+  }
+});
+
+// Cancel button
+document.getElementById("cancel-delete-btn").onclick = () => {
+    document.getElementById("confirm-delete-popup").classList.add("hidden");
+  };
+
+  document.getElementById("confirm-delete-btn").onclick = () => {
+    const contactId = window.currentContactId;
+    if (!contactId) {
+      alert("No contact selected.");
+      return;
+    }
+
+    const user = firebase.auth().currentUser;
+    if (!user) {
+      alert("User not logged in.");
+      return;
+    }
+
+    const userId = user.uid;
+    const docRef = firebase.firestore()
+  .collection("users").doc(userId)
+  .collection("contacts").doc(contactId);
+
+    docRef.delete()
+      .then(() => {
+        alert("Contact deleted successfully.");
+        document.getElementById("confirm-delete-popup").classList.add("hidden");
+        location.reload(); // or you can refresh the contact list only
+      })
+      .catch(err => {
+        alert("Error deleting contact: " + err.message);
+        console.error("Delete error", err);
+      });
+  };
 </script>
 
 
