--- a/settings.html
+++ b/settings.html
@@ -62,6 +62,12 @@
 </label>
   
 </label></div> 
+<div class="form-group">
+  <label>
+    <input type="checkbox" id="auto-add-vcard">
+    Automatically add shared contacts to my device
+  </label>
+</div>
 </div><div><button type="submit">Save</button>
 <button id="settings-logout" type="button">Logout</button></div>
 </div> 
@@ -154,7 +160,11 @@ document.addEventListener('DOMContentLoaded', async () => {
     latInput.disabled = useGPS;
     lngInput.disabled = useGPS;
   }
-
+const autoAddCheckbox = document.getElementById("auto-add-vcard");
+const autoAddStored = localStorage.getItem("autoAddVCard");
+if (autoAddCheckbox && autoAddStored !== null) {
+  autoAddCheckbox.checked = autoAddStored === "true";
+}
 gpsCheckbox.addEventListener('change', () => {
   updateLocationFieldState(gpsCheckbox.checked);
   if (gpsCheckbox.checked && navigator.geolocation) {
@@ -238,6 +248,9 @@ if (greetingEl && data.firstName) {
 
     const useGPS = gpsCheckbox.checked;
     localStorage.setItem('useGPS', useGPS ? 'true' : 'false');
+const autoAdd = document.getElementById("auto-add-vcard").checked;
+localStorage.setItem("autoAddVCard", autoAdd);
+// Or save to Firebase if you already store other settings
 
     const profileData = {
       firstName: document.getElementById('profile-first-name').value.trim(),
