--- a/kekino.html
+++ b/kekino.html
@@ -61,7 +61,12 @@
 		 
  </div>
 		
-        
+   <a href="ICS Generator.html">
+		<div class="pillars">
+          <div class="pillar">
+            <h2> ICS <i class="fa-solid fa-child-reaching"></i></h2>
+            <p>GENERATOR</p>
+          </div></a>     
   <div class="pi-icon"><i class="fa-solid fa-person-walking"></i></div>
   <div class="pi-title">Ke Kino</div>
   <div class="pi-focus">E mālama i ke kino </div><div class="pi-eng"> To care for the vessel of life</div>
@@ -183,7 +188,7 @@
 <button onclick="window.location.href='uhane.html'">Uhane</button>
 <button onclick="window.location.href='kekino.html'">Kino</button>
 <button onclick="window.location.href='manao.html'">Manao</button>
-<button onclick="window.location.href='Hana.html'">Hana</button>
+<button onclick="window.location.href='hana.html'">Hana</button>
 <button onclick="window.location.href='settings.html'">Settings</button>
 </div>
 <script>
