--- a/ICS Generator.html
+++ b/ICS Generator.html
@@ -1286,6 +1286,10 @@ extra-time-scroller {
       font-size: 0.9rem;
       cursor: pointer;
     }
+	#more-menu-settings button {
+  color: #111 !important;  /* Makes the text black and overrides other styles */
+  background: none;        /* Optional: removes any background color if needed */
+}
 </style>
 
 </head>
